# GPIG_Project

./: .gitignore  AStar.py  Cargo.toml  Helpers.py  IdDictionary.py  Map.py  NodeLookup.py  Option.py  README.md  Result.py  cherry_tree_disease.py  databaseIntegration.py  databaseInterface.py  demo.py  docker-compose.yml  maze-32-32-4.map  node.py  pyproject.toml  requirements.txt  sensordata.py  sites.py  start_ui.sh  test.py  tests.py  ui_entrypoint.py
.github/workflows/: ci.yml
Tree identification/: Tree identificator.py  Tree images.csv
UnitTests/objects/: node_test.py
classifier/: classifier.py  training.py
database/: databaseIntegration.py  databaseInterface.py  database_handler.py  db.ini  random_data_handler.py
dataset_filter/: dataset_filter.py  listCommonSpecies.txt  listSpecies.txt
docker-entrypoint-initdb.d/: schema.sql
documentation/system_design/: system_design_v1.drawio.xml
node_lookup/: Cargo.toml
node_lookup/src/: lib.rs
node_lookup/src/structs/: edge.rs  map.rs  mod.rs  node.rs  node_edge.rs  wrapped_float.rs
objects/: node.py  plant.py  sensordata.py  site.py  species.py
web_ui/: dashboard.py  plotly_handler.py  pydeck_map.py  ui_entrypoint.py
xtask/: Cargo.toml
xtask/src/: ci.rs  main.rs
